[project]
name = "hydra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "hydra-submitit-launcher>=1.2.0",
    "optuna-dashboard>=0.14.0",
    "scikit-learn>=1.5.2",
    "setuptools>=75.6.0",
    "sqlalchemy==1.4.46",
]
